--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
                     <li>LaTeX</li>
                 </ul>
                 <p class="card-text">などを書くことがあります。</p>
-                <p class="card-text">自然言語処理や論理学に興味があります。</p>
+                <p class="card-text">自然言語処理や論理学に興味があります。韓国語🔰</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">いろいろ</h4>
+                        <ul>
+                            <li style="color: #00C0C0;">AtCoder水 (Highest: 1229)</li>
+                            <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
+                            <li>第48回木高祭で自作ゲーム「<a href="https://github.com/private-yusuke/StarGetter">StarGetter</a>」展示</li>
+                            <li>千葉大学主催第12回高校生理科研究発表会で課題研究「フィボナッチ数列を求めるアルゴリズムたち」優秀賞受賞</li>
+                        </ul>
+                    </div>
+                </div>
               </div>
             </div>
             <table class="table">
