--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                             <li style="color: #00C0C0;">AtCoder水 (Highest: 1229)</li>
                             <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
                             <li>第48回木高祭で自作ゲーム「<a href="https://github.com/private-yusuke/StarGetter">StarGetter</a>」展示</li>
+                            <li>第49回木高祭で同人ゲーム「<a href="https://github.com/ckkpd/breakout-like">breakout-like</a>」展示</li>
+                            <li>2019年度第1回 実用英語技能検定(英検) 準1級 合格</li>
                             <li>千葉大学主催第12回高校生理科研究発表会で課題研究「フィボナッチ数列を求めるアルゴリズムたち」優秀賞受賞</li>
                         </ul>
                     </div>
