--- a/index.html
+++ b/index.html
@@ -24,16 +24,29 @@
             max-width: 128px;
             border-radius: 100%;
         }
-        .jumbotron {
+        .background {
+            z-index: 0;
+            image-rendering: pixelated;
+            background-color: #00C0C0;
             background-image: url("images/bg.png");
-            background-size: cover;
-            background-position: center 60%;
+            background-size: contain;
+            position: relative;
+        }
+        .background::before {
+            content: '';
+            filter: brightness(0.5);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            background: inherit;
+            z-index: -1;
         }
     </style>
 </head>
 <body>
     <main role="main">
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid background">
             <div class="container">
                 <img src="images/icon.png" alt="private_yusuke" id="avatar" class="mx-auto">
             </div>
