--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-143785591-1');
     </script>
+    <link rel="stylesheet" href="css/main.css">
 
     <title>private-yusuke</title>
     <style>
@@ -23,24 +24,6 @@
             display: block;
             max-width: 128px;
             border-radius: 100%;
-        }
-        .background {
-            z-index: 0;
-            image-rendering: pixelated;
-            background-color: #00C0C0;
-            background-image: url("images/bg.png");
-            background-size: contain;
-            position: relative;
-        }
-        .background::before {
-            content: '';
-            filter: brightness(0.5);
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            background: inherit;
-            z-index: -1;
         }
     </style>
 </head>
