--- a/works.html
+++ b/works.html
@@ -33,8 +33,8 @@
 <body>
     <main role="main">
         <div class="jumbotron jumbotron-fluid background">
-            <div class="container" style="background-color: rgba(255, 255, 255, 0.5)">
-                <h1>Works</h1>
+            <div class="container" style="background-color: rgba(240, 240, 240, 0.8)">
+                <h1 class="display-4">Works</h1>
             </div>
         </div>
         <div class="container-fluid">
