--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 <li>
                     線形代数🔢
                     <ul>
-                        <li>フィボナッチ数を求めるアルゴリズムの一つに、行列を用いて漸化式を表現し、それを繰り返し二乗法で処理すると計算量が$O(\log n)$に落ちるものがあり、それ理解するために勉強する必要が出たのでやっていた</li>
+                        <li>フィボナッチ数を求めるアルゴリズムの一つに、行列を用いて漸化式を表現し、それを繰り返し二乗法で処理すると計算量が$O(\log n)$に落ちるものがあり、それを理解するために勉強する必要が出たのでやっていた</li>
                         <li><a href="https://www.amazon.co.jp/dp/4873117585/ref=cm_sw_r_tw_dp_U_x_z44sDbBPHHFVD">ゼロから作るDeep Learning</a>を読むときも簡単な行列と偏微分の知識が必要だったので初歩的な部分を勉強した</li>
                     </ul>
                 </li>
