--- a/works.html
+++ b/works.html
@@ -236,7 +236,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a href="." class="btn btn-secondary">もどる</a>
+            <a href=".">もどる</a>
             <p class="text-muted">&copy; private-yusuke 2019</p>
         </div>
     </footer>
