Moved achievements and added some descriptions

--- a/about.html
+++ b/about.html
@@ -80,13 +80,6 @@
                     <ul>
                         <li><a href="https://www.amazon.co.jp/dp/4839941068/ref=cm_sw_r_tw_dp_U_x_i74sDbDTCBDNA">プログラミングコンテストチャレンジブック [第2版]</a>や<a href="https://www.amazon.co.jp/dp/4839952957/ref=cm_sw_r_tw_dp_U_x_j84sDbRVMWRJC">プログラミングコンテスト攻略のためのアルゴリズムとデータ構造</a>で勉強中</li>
                         <li>高校の旧パソコン同好会を、人数集めてみんなで情報オリンピック予選出たのち、<a href="https://twitter.com/kisarazu_hs_pc">パソコン部</a>に昇格させました</li>
-                        <li>実績
-                            <ul>
-                                <li style="color: #00C0C0;">AtCoder水 (Highest: 1229) 4級</li>
-                                <li>Google Code Jam Qualification Round 2019 通過</li>
-                                <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
-                            </ul>
-                        </li>
                     </ul>
                 </li>
                 <li>
@@ -94,6 +87,7 @@
                     <ul>
                         <li>3DSのプチコン3号で、<a href="https://www.youtube.com/watch?v=UmiSj0Jlukc">バブルソート</a>と<a href="https://www.youtube.com/watch?v=j9BQtwMNcxE">挿入ソート</a>の視覚化をした</li>
                         <li>Wolfram Codeに対応したセルオートマトン描画ソフト<a href="https://github.com/private-yusuke/cellular_d">cellular_d</a>を制作</li>
+                        <li>課題研究で同じ班だった情報分野にあまり明るくない人々に、一連の線形代数の基礎や計算量の概念などを指導しました</li>
                     </ul>
                 </li>
                 <li>ゲーム制作🎮
@@ -104,7 +98,12 @@
                 </li>
                 <li>自然言語📖
                     <ul>
-                        <li>英語を学習中</li>
+                        <li>英語を学習中
+                            <ul>
+                                <li>特に対策もしなかったが、ふと思い英検準1級を受験したら合格した</li>
+                                <li>自然体で普段から英語に触れています。最近は化学を英語で取り組んでいます</li>
+                            </ul>
+                        </li>
                         <li>韓国語を2019年から学習中🔰</li>
                     </ul>
                 </li>
@@ -118,6 +117,9 @@
                         <li>木更津高校平成30年度SSH校内研究発表会にて口頭発表、ポスター発表</li>
                     </ul>
                 </li>
+                <li style="color: #00C0C0;">AtCoder水 (Highest: 1229) 4級</li>
+                <li>Google Code Jam Qualification Round 2019 通過</li>
+                <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
                 <li>2019年度第1回 実用英語技能検定(英検) 準1級 合格</li>
             </ul>
             <h4>好きなもの</h4>
