--- a/works.html
+++ b/works.html
@@ -219,6 +219,25 @@
                 </div>
                 <div class="col-md-6 col-lg-3 py-3 border-top">
                     <div class="card mb-4 box-shadow">
+                        <img src="images/tytype.png" alt="tytype" class="card-img-top">
+                        <div class="card-body">
+                            <h4 class="card-title">tytype</h4>
+                            <p class="card-text">
+                                プログラムのソースコード用タイピングゲーム(?)です。Vueを利用しています。小ネタとして、タイピング時に音が鳴るオプションがあります。
+                            </p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a href="https://tytype.ckkpd.xyz/"
+                                        class="btn btn-primary active" role="button">Play</a>
+                                    <a href="https://github.com/private-yusuke/tytype"
+                                        class="btn btn-link active" role="button">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 py-3 border-top">
+                    <div class="card mb-4 box-shadow">
                         <div class="card-body">
                             <h4 class="card-title">ほかにもたくさん</h4>
                             <ul>
@@ -227,7 +246,7 @@
                             </ul>
                         </div>
                         <div class="card-footer">
-                            <p class="card-text">最終更新: 2019/08/08</p>
+                            <p class="card-text">最終更新: 2019/08/09</p>
                         </div>
                     </div>
                 </div>
