--- a/about.html
+++ b/about.html
@@ -112,9 +112,10 @@
             <ul>
                 <li>理数科での課題研究で、「フィボナッチ数列を求めるアルゴリズムたち」というテーマで論文を書いたりポスター発表をした
                     <ul>
-                        <li>千葉大学主催第12回高校生理科研究発表会にてポスター発表、数学・情報の部で優秀賞</li>
-                        <li>第10回千葉県課題研究発表会(会場: 千葉工業大学)において、数学の部で口頭発表、ポスター発表</li>
+                        <li><a href="https://www.cfs.chiba-u.jp/koudai-renkei/event/history/2018/houkoku30.html">千葉大学主催第12回高校生理科研究発表会</a>にてポスター発表、数学・情報の部で優秀賞</li>
+                        <li><a href="https://www.chiba-c.ed.jp/funako/fttp_kousin/ssh/2019_0316_3b.pdf">第10回千葉県課題研究発表会</a>において、数学の部で口頭発表、ポスター発表</li>
                         <li>木更津高校平成30年度SSH校内研究発表会にて口頭発表、ポスター発表</li>
+                        <li>(<a href="http://tus-alumni.risoukai.tus.ac.jp/event/botchan-science">第18回 坊っちゃん科学賞研究論文コンテスト</a>に提出予定)</li>
                     </ul>
                 </li>
                 <li style="color: #00C0C0;">AtCoder水 (Highest: 1229) 4級</li>
