--- a/works.html
+++ b/works.html
@@ -204,13 +204,13 @@
                     <div class="card mb-4 box-shadow">
                         <img src="images/slack-webshot-bot.png" alt="slack-webshot-bot" class="card-img-top">
                         <div class="card-body">
-                            <h4 class="card-title">slack-mathjax-bot</h4>
+                            <h4 class="card-title">slack-webshot-bot</h4>
                             <p class="card-text">
                                 Slack上でURLを与えてあげると、そのウェブサイトのスクリーンショットを描画して投稿してくれるボットです。
                             </p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="https://github.com/private-yusuke/slack-mathjax-bot"
+                                    <a href="https://github.com/private-yusuke/slack-webshot-bot"
                                         class="btn btn-link active" role="button">GitHub</a>
                                 </div>
                             </div>
