--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <tr><td>GitHub</td><td><a href="//github.com/private-yusuke">private-yusuke</a></td></tr>
                     <tr><td>Twitter</td><td><a href="//twitter.com/public_yusuke">public_yusuke</a></td></tr>
                     <tr><td>はてなブログ</td><td><a href="//private-yusuke.hatenadiary.jp">private-yusuke's diary</a></td></tr>
+                    <tr><td>AOJ</td><td><a href="http://judge.u-aizu.ac.jp/onlinejudge/user.jsp?id=private_yusuke">private_yusuke</a></td></tr>
                 </tbody>
             </table>
         </div>
