--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     数学基礎論, 集合論⏰
                     <ul>
                         <li>高１のとき、Twitterで目にするコンパクト(数学用語)ってなんだろうと思い<a href="https://www.amazon.co.jp/dp/4000054244/ref=cm_sw_r_tw_dp_U_x_CO4sDbRKR2M13">集合・位相入門(松坂 和夫)</a>に手を出したものの挫折。右逆写像の存在が選択公理と等価という証明まで追った</li>
-                        <li><a href="https://www.amazon.co.jp/dp/4130120530/ref=cm_sw_r_tw_dp_U_x_BM4sDbC3X159S">論理学(野矢 茂樹)</a>と<a href="https://www.amazon.co.jp/dp/4062573326/ref=cm_sw_r_tw_dp_U_x_4K4sDbDKZ2J6Y">新装版 集合とはなにか(竹内 外史)</a>を読んだりした。一階述語論理を扱えるようになった</li>
+                        <li><a href="https://www.amazon.co.jp/dp/4130120530/ref=cm_sw_r_tw_dp_U_x_BM4sDbC3X159S">論理学(野矢 茂樹)</a>と<a href="https://www.amazon.co.jp/dp/4062573326/ref=cm_sw_r_tw_dp_U_x_4K4sDbDKZ2J6Y">新装版 集合とはなにか(竹内 外史)</a>と<a href="https://www.amazon.co.jp/Q-%E6%95%B0%E5%AD%A6%E5%9F%BA%E7%A4%8E%E8%AB%96%E5%85%A5%E9%96%80-%E4%B9%85%E9%A6%AC-%E6%A0%84%E9%81%93/dp/4320014952">Q&A 数学基礎論入門(久馬 栄道)</a> を読んだりした。一階述語論理を扱えるようになったりチューリングマシンの話とか順序数の話などを読んだ</li>
                         <li>1+1=2の証明ってなんだろうという疑問が<ruby><rb>$\forall$</rb><rp>(</rp><rt>すべて</rt><rp>)</rp></ruby>の根源</li>
                     </ul>
                 </li>
