--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <li>第49回木高祭で同人ゲーム「<a href="https://github.com/ckkpd/breakout-like">breakout-like</a>」展示</li>
                             <li>2019年度第1回 実用英語技能検定(英検) 準1級 合格</li>
                             <li>千葉大学主催第12回高校生理科研究発表会で課題研究「フィボナッチ数列を求めるアルゴリズムたち」優秀賞受賞</li>
+                            <li>PCK2019本選</li>
                             <li><a href="about.html">details…</a></li>
                         </ul>
                     </div>
