--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                 <li style="color: #00C0C0;">AtCoder水 (Highest: 1229) 4級</li>
                 <li>Google Code Jam Qualification Round 2019 通過</li>
                 <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
-                <li>パソコン甲子園<ruby>2<rt>に・</rt>0<rt>ぜろ・</rt>1<rt>いち・</rt>9<rt>きゅう</rt></ruby>本選出場</li>
+                <li>パソコン甲子園<ruby>2019<rt>に・ぜろ・いち・きゅう</rt></ruby></li>
                 <li>2019年度第1回 実用英語技能検定(英検) 準1級 合格</li>
             </ul>
             <h4>好きなもの</h4>
