--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
             max-width: 128px;
             border-radius: 100%;
         }
+        #ul-root > li {
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -39,7 +42,7 @@
             </div>
         </div>
         <div class="container">
-            <h3>public_yusuke (private_yusuke)</h3>
+            <h3>public_yusuke (<code>[private|public]_yusuke</code>)</h3>
             <img src="images/icon.png" style="width: 150px; height: 150px; margin: 20px;">
             <h4>プロフィール</h4>
             <ul>
@@ -47,25 +50,17 @@
                 <li>メール: sakurapleasure0@gmail.com</li>
             </ul>
             <h4>興味のあること</h4>
-            <p>自然言語処理，数学基礎論, 集合論, 線形代数, 競技プログラミング, データ構造とアルゴリズム, ゲーム制作, 自然言語</p>
-            <p><b>言葉の数理的処理</b>に関連すること</p>
+            <p>競プロ, 英語, ゲーム制作, NLP</p>
+            <p></p>
 
-            <h4>追随して行なっていること</h4>
-            <ul>
+            <h4>様々</h4>
+            <ul id="ul-root">
                 <li>
                     自然言語処理📚
                     <ul>
                         <li>3-gramのモデルにおけるマルコフ連鎖のライブラリ(<a href="https://github.com/private-yusuke/markov-ja">markov-ja</a>)とそれを利用したチャットボット(<a href="https://github.com/private-yusuke/botot2">botot2</a>)の制作</li>
-                        <li>意味内容を捉えたり、感情を解釈するような処理は全く出来ていなくて、単純に形態素解析のみしかしていないのでもう少し高度なことをしたい</li>
+                        <li>MeCab使って形態素解析させたらなんか面白いことができそうだと思ったので作った</li>
                         <li><a href="https://www.amazon.co.jp/dp/4627853114/ref=cm_sw_r_tw_dp_U_x_Pa8sDbT0X3DVZ">はじめての自然言語処理</a>を読んだ</li>
-                    </ul>
-                </li>
-                <li>
-                    数学基礎論, 集合論⏰
-                    <ul>
-                        <li>高１のとき、Twitterで目にするコンパクト(数学用語)ってなんだろうと思い<a href="https://www.amazon.co.jp/dp/4000054244/ref=cm_sw_r_tw_dp_U_x_CO4sDbRKR2M13">集合・位相入門(松坂 和夫)</a>に手を出したものの挫折。右逆写像の存在が選択公理と等価という証明まで追った</li>
-                        <li><a href="https://www.amazon.co.jp/dp/4130120530/ref=cm_sw_r_tw_dp_U_x_BM4sDbC3X159S">論理学(野矢 茂樹)</a>と<a href="https://www.amazon.co.jp/dp/4062573326/ref=cm_sw_r_tw_dp_U_x_4K4sDbDKZ2J6Y">新装版 集合とはなにか(竹内 外史)</a>と<a href="https://www.amazon.co.jp/Q-%E6%95%B0%E5%AD%A6%E5%9F%BA%E7%A4%8E%E8%AB%96%E5%85%A5%E9%96%80-%E4%B9%85%E9%A6%AC-%E6%A0%84%E9%81%93/dp/4320014952">Q&A 数学基礎論入門(久馬 栄道)</a> を読んだりした。一階述語論理を扱えるようになったりチューリングマシンの話とか順序数の話などを読んだ</li>
-                        <li>1+1=2の証明ってなんだろうという疑問が<ruby><rb>$\forall$</rb><rp>(</rp><rt>すべて</rt><rp>)</rp></ruby>の根源</li>
                     </ul>
                 </li>
                 <li>
@@ -78,20 +73,21 @@
                 <li>
                     競技プログラミング💻
                     <ul>
-                        <li><a href="https://www.amazon.co.jp/dp/4839941068/ref=cm_sw_r_tw_dp_U_x_i74sDbDTCBDNA">プログラミングコンテストチャレンジブック [第2版]</a>や<a href="https://www.amazon.co.jp/dp/4839952957/ref=cm_sw_r_tw_dp_U_x_j84sDbRVMWRJC">プログラミングコンテスト攻略のためのアルゴリズムとデータ構造</a>で勉強中</li>
-                        <li>高校の旧パソコン同好会を、人数集めてみんなで情報オリンピック予選出たのち、<a href="https://twitter.com/kisarazu_hs_pc">パソコン部</a>に昇格させました</li>
+                        <li>高校の旧パソコン同好会を、人数集めてみんなで情報オリンピック予選出たのち、<a href="https://twitter.com/kisarazu_hs_pc">パソコン部</a>に昇格させた</li>
+                        <li>PCK2019本選に出ることになったのでとてもよかった</li>
                     </ul>
                 </li>
                 <li>
                     データ構造とアルゴリズム💾
                     <ul>
-                        <li>3DSのプチコン3号で、<a href="https://www.youtube.com/watch?v=UmiSj0Jlukc">バブルソート</a>と<a href="https://www.youtube.com/watch?v=j9BQtwMNcxE">挿入ソート</a>の視覚化をした</li>
-                        <li>Wolfram Codeに対応したセルオートマトン描画ソフト<a href="https://github.com/private-yusuke/cellular_d">cellular_d</a>を制作</li>
-                        <li>課題研究で同じ班だった情報分野にあまり明るくない人々に、一連の線形代数の基礎や計算量の概念などを指導しました</li>
+                        <li>3DSのプチコン3号で、<a href="https://www.youtube.com/watch?v=UmiSj0Jlukc">バブルソート</a>と<a href="https://www.youtube.com/watch?v=j9BQtwMNcxE">挿入ソート</a>の視覚化をしてみた</li>
+                        <li>Wolfram Codeに対応したセルオートマトン描画ソフト<a href="https://github.com/private-yusuke/cellular_d">cellular_d</a>を作った</li>
+                        <li>課題研究で同じ班だった情報分野にあまり明るくない人々に、一連の線形代数の基礎や計算量の概念などを教えた</li>
                     </ul>
                 </li>
                 <li>ゲーム制作🎮
                     <ul>
+                        <li>基本的にUnityで開発してランキングサーバーをTypeScriptで書く</li>
                         <li>第48回木高祭で自作ゲーム「<a href="https://github.com/private-yusuke/StarGetter">StarGetter</a>」展示 <a href="https://twitter.com/kisarazu_hs_pc/status/1010764521416245249">159名の方が展示場でプレイ</a></li>
                         <li>第49回木高祭で同人ゲーム「<a href="https://github.com/ckkpd/breakout-like">breakout-like</a>」展示 <a href="https://twitter.com/kisarazu_hs_pc/status/1142331840360927232">178人の方が展示場で計557回プレイ</a></li>
                     </ul>
@@ -101,7 +97,7 @@
                         <li>英語を学習中
                             <ul>
                                 <li>特に対策もしなかったが、ふと思い英検準1級を受験したら合格した</li>
-                                <li>自然体で普段から英語に触れています。最近は化学を英語で取り組んでいます</li>
+                                <li>最近は化学を英語でやったりしてる（覚えやすい）</li>
                             </ul>
                         </li>
                         <li>韓国語を2019年から学習中🔰</li>
@@ -110,23 +106,22 @@
             </ul>
             <h4>実績</h4>
             <ul>
-                <li>理数科での課題研究で、「フィボナッチ数列を求めるアルゴリズムたち」というテーマで論文を書いたりポスター発表をした
+                <li>理数科での課題研究で、「フィボナッチ数列を求めるアルゴリズムたち」
                     <ul>
                         <li><a href="https://www.cfs.chiba-u.jp/koudai-renkei/event/history/2018/houkoku30.html">千葉大学主催第12回高校生理科研究発表会</a>にてポスター発表、数学・情報の部で優秀賞</li>
                         <li><a href="https://www.chiba-c.ed.jp/funako/fttp_kousin/ssh/2019_0316_3b.pdf">第10回千葉県課題研究発表会</a>において、数学の部で口頭発表、ポスター発表</li>
                         <li>木更津高校平成30年度SSH校内研究発表会にて口頭発表、ポスター発表</li>
-                        <li>(<a href="http://tus-alumni.risoukai.tus.ac.jp/event/botchan-science">第18回 坊っちゃん科学賞研究論文コンテスト</a>に提出予定)</li>
+                        <li><a href="http://tus-alumni.risoukai.tus.ac.jp/event/botchan-science">第18回 坊っちゃん科学賞研究論文コンテスト</a>で入賞した</li>
                     </ul>
                 </li>
                 <li style="color: #00C0C0;">AtCoder水 (Highest: 1229) 4級</li>
-                <li>Google Code Jam Qualification Round 2019 通過</li>
                 <li>JOI2018予選 331点 Bランク（敢闘賞）</li>
                 <li>パソコン甲子園<ruby>2019<rt>に・ぜろ・いち・きゅう</rt></ruby> プログラミング部門 本選出場「AはDPのA」</li>
                 <li>2019年度第1回 実用英語技能検定(英検) 準1級 合格</li>
             </ul>
             <h4>好きなもの</h4>
             <ul>
-                <li><code>/D言語(くん)?/</code>, 赤黒木, 💻, 数学と情報</li>
+                <li><code>/D言語(くん)?/</code>, 赤黒木, 💻, 数学と情報, 英語</li>
                 <li>Kawaii Future Bass, 音ゲー, ピアノ(聞くのも弾くのも)</li>
                 <li><a href="https://ja.wikipedia.org/wiki/%E3%82%B9%E3%83%86%E3%83%A9%E3%81%AE%E3%81%BE%E3%81%BB%E3%81%86">ステラのまほう</a></li>
             </ul>
