--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="container">
-            <h3>public_yusuke (<code>[private|public]_yusuke</code>)</h3>
+            <h3>public_yusuke (<code>(private|public)_yusuke</code>)</h3>
             <img src="images/icon.png" style="width: 150px; height: 150px; margin: 20px;">
             <h4>プロフィール</h4>
             <ul>
