--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="card-body">
                     <h4 class="card-title">public_yusuke (private_yusuke)</h4>
                     
-                    <p class="card-text">私は高校3年生です。競技プログラミングが好きです。</p>
+                    <p class="card-text">私は高校3年生です。競技プログラミングが好きです。ITF. coins20(予定)</p>
                     <div class="card">
                         <div class="card-body">
                         <p><a href="works.html">作ったもの</a></p>
