--- a/index-en-US.html
+++ b/index-en-US.html
@@ -14,12 +14,12 @@
         <div class="navbar-brand"><a class="navbar-item" href="index.html">
             <p>🇯🇵</p></a><a class="navbar-item" href="index-en-US.html">
             <p>🇺🇸</p></a><a class="navbar-item" href="assets/old">
-            <p>古い</p></a></div>
+            <p>old</p></a></div>
       </nav>
       <div class="hero-body">
         <div class="container">
           <div class="columns is-vcentered is-mobile">
-            <div class="column is-5 is-offset-1 landing-caption"><span>パソコンが好きな人の集まりのうちのひとり</span>
+            <div class="column is-5 is-offset-1 landing-caption"><span>Yet another random person that exists on the Internet</span>
               <h1 class="title is-1 is-bold is-spaced">public_yusuke</h1>
             </div>
             <div class="column is-4 is-offset-1">
@@ -32,52 +32,52 @@
     <main>
       <div class="container">
         <section class="section" id="summary">
-          <h1 class="title"><i class="fas fa-book fa-fw"></i> 概要</h1>
-          <h2 class="subtitle">現在の状況</h2>
+          <h1 class="title"><i class="fas fa-book fa-fw"></i> Summary</h1>
+          <h2 class="subtitle">Current assignment</h2>
           <div class="summary-list">
             <article class="media">
               <figure class="media-left"><i class="fas fa-birthday-cake fa-fw"></i></figure>
-              <div class="media-content"><strong>生年月日</strong>
-                <p>2001年11月11日</p>
+              <div class="media-content"><strong>Birthday</strong>
+                <p>Nov 11, 2001</p>
               </div>
             </article>
             <article class="media">
               <figure class="media-left"><i class="fas fa-school fa-fw"></i></figure>
-              <div class="media-content"><strong>所属</strong>
-                <p>千葉県立木更津高等学校</p>
+              <div class="media-content"><strong>Affiliation</strong>
+                <p>Kisarazu High School</p>
               </div>
             </article>
             <article class="media">
               <figure class="media-left"><i class="fas fa-graduation-cap fa-fw"></i></figure>
-              <div class="media-content"><strong>学科</strong>
-                <p>理数科</p>
+              <div class="media-content"><strong>Department</strong>
+                <p>Science and mathematics course (known as 理数科)</p>
               </div>
             </article>
           </div>
         </section>
         <section class="section" id="skills">
-          <h1 class="title"><i class="fas fa-cog fa-fw"></i> 技能</h1>
-          <h2 class="subtitle">趣味一覧でもある</h2>
+          <h1 class="title"><i class="fas fa-cog fa-fw"></i> Skills</h1>
+          <h2 class="subtitle">Also my hobbies</h2>
           <div class="columns">
             <div class="column"><img class="is-size-2" src="assets/dlang.svg"><br>
               <h4 class="is-size-4">D</h4>
-              <div class="tag is-light is-primary">一番好き</div>
-              <div class="tag is-light is-success">雑多</div>
+              <div class="tag is-light is-primary">My favorite</div>
+              <div class="tag is-light is-success">Miscellaneous</div>
             </div>
             <div class="column"><i class="is-size-2 devicon-typescript-plain colored"></i><br>
               <h4 class="is-size-4">TypeScript</h4>
               <div class="tag is-light is-info">VSCode</div>
-              <div class="tag is-light is-success">チャットボット開発</div>
+              <div class="tag is-light is-success">Chatbot</div>
             </div>
             <div class="column"><i class="is-size-2 devicon-csharp-plain colored"></i><br>
               <h4 class="is-size-4">C#</h4>
               <div class="tag is-light is-info">Unity</div>
-              <div class="tag is-light is-success">ゲーム制作</div>
+              <div class="tag is-light is-success">Game dev</div>
             </div>
             <div class="column"><i class="is-size-2 devicon-cplusplus-plain colored"></i><br>
               <h4 class="is-size-4">C++</h4>
               <div class="tag is-light is-info">Qt</div>
-              <div class="tag is-light is-success">競プロと小さいもの</div>
+              <div class="tag is-light is-success">CP &amp; Miscellaneous</div>
             </div>
           </div>
           <div class="columns">
@@ -85,29 +85,29 @@
               <h4 class="is-size-4">Linux</h4>
               <div class="tag is-light is-info">Debian</div>
               <div class="tag is-light is-info">Arch Linux</div>
-              <div class="tag is-light is-success">サーバー管理</div>
+              <div class="tag is-light is-success">Server</div>
             </div>
             <div class="column"><i class="is-size-2 devicon-css3-plain colored"></i><br>
               <h4 class="is-size-4">CSS</h4>
               <div class="tag is-light is-info">Bootstrap</div>
               <div class="tag is-light is-info">Bulma</div>
-              <div class="tag is-light is-success">少し書く</div>
+              <div class="tag is-light is-success">Coding this</div>
             </div>
             <div class="column"><img src="assets/LaTeX_logo.svg" width="90px"><br>
               <h4 class="is-size-4">LaTeX</h4>
               <div class="tag is-light is-info">Sublime Text 3</div>
-              <div class="tag is-light is-success">まあまあ書く</div>
+              <div class="tag is-light is-success">Write a bit</div>
             </div>
             <div class="column"><i class="is-size-2 devicon-twitter-plain colored"></i><br>
               <h4 class="is-size-4">Twitter</h4>
               <div class="tag is-light is-info">TweetDeck</div>
-              <div class="tag is-light is-success">何の役にも立たぬ投稿</div>
+              <div class="tag is-light is-success">Shitposting</div>
             </div>
           </div>
         </section>
         <section class="section" id="links">
-          <h1 class="title"><i class="fas fa-link"></i> リンク</h1>
-          <h2 class="subtitle">つながり</h2>
+          <h1 class="title"><i class="fas fa-link"></i> Links</h1>
+          <h2 class="subtitle">Some kind of a directed graph</h2>
           <div class="columns is-mobile">
             <div class="column"><a class="twitter" href="https://twitter.com/public_yusuke" target="_blank"><i class="is-size-2 fab fa-twitter"></i>
                 <p>Twitter</p></a></div>
@@ -120,46 +120,48 @@
           </div>
         </section>
         <section class="section" id="history">
-          <h1 class="title"><i class="fas fa-history fa-fw"></i> 歴史</h1>
-          <h2 class="subtitle">今日までの人生</h2>
+          <h1 class="title"><i class="fas fa-history fa-fw"></i> History</h1>
+          <h2 class="subtitle">Of my life until today</h2>
           <div class="timeline">
-            <div class="timeline-header"><span class="tag is-medium is-primary">開始</span></div>
+            <div class="timeline-header"><span class="tag is-medium is-primary">Start</span></div>
             <div class="timeline-item is-danger">
               <div class="timeline-marker is-danger"></div>
               <div class="timeline-content">
-                <p class="heading">2001年11月11日 :: 0歳</p>
-                <p><i class="fas fa-birthday-cake"></i> 誕生</p>
+                <p class="heading">November 11, 2001 :: age 0</p>
+                <p><i class="fas fa-birthday-cake"></i> Birth</p>
               </div>
             </div>
             <div class="timeline-item is-primary">
               <div class="timeline-marker is-primary"></div>
               <div class="timeline-content">
-                <p class="heading">2003年 :: 2歳</p>
-                <p><i class="fas fa-desktop"></i> パソコンを使い始める</p>
+                <p class="heading">2003 :: age 2</p>
+                <p><i class="fas fa-desktop"></i> Started using computers</p>
               </div>
             </div>
             <div class="timeline-header"><span class="tag is-primary">2010</span></div>
             <div class="timeline-item">
               <div class="timeline-marker"></div>
               <div class="timeline-content">
-                <p class="heading">2010年8月 :: 9歳</p>
-                <p><i class="fas fa-desktop"></i> はじめてプログラムをつくる</p>
-                <p class="timeline-desc">祖父のBASICが動く計算機を弄った</p>
+                <p class="heading">August, 2010 :: age 9</p>
+                <p><i class="fas fa-desktop"></i> The first time I make a program</p>
+                <p class="timeline-desc">Fiddling around with my grandfather's calculator on which has BASIC installed</p>
               </div>
             </div>
             <div class="timeline-item is-info">
               <div class="timeline-marker is-info"></div>
               <div class="timeline-content">
-                <p class="heading">2013年 :: 12歳</p>
-                <p><i class="devicon-java-plain"></i> MinecraftのMODを制作する</p>
-                <p class="timeline-desc">複合的道具追加と鉱物追加など</p>
+                <p class="heading">2013 :: age 12</p>
+                <p><i class="devicon-java-plain"></i> Created some Minecraft Mods</p>
+                <p class="timeline-desc">Adding composite tools, new ores and etc.</p>
               </div>
             </div>
             <div class="timeline-header some-happnened">
               <div>
-                <pre style="padding: 0.5rem;">いろいろな
-ことが
-おきた</pre>
+                <pre style="padding: 0.5rem;">A
+lot
+of
+things
+happened</pre>
               </div>
             </div>
             <div class="timeline-item"></div>
@@ -167,50 +169,50 @@
             <div class="timeline-item is-warning">
               <div class="timeline-marker is-warning"></div>
               <div class="timeline-content">
-                <p class="heading">9月29日 :: 17歳</p>
-                <p><i class="fas fa-school"></i> 千葉大学主催第12回高校生理科研究発表会、数学・情報の部で優秀賞</p>
-                <p class="timeline-desc">「フィボナッチ数列を求めるアルゴリズムたち」<a class="timeline-link" href="https://www.cfs.chiba-u.jp/koudai-renkei/event/history/2018/houkoku30.html" target="_blank"><i class="fas fa-external-link-alt"></i> 公式サイト</a></p>
+                <p class="heading">September 29 :: age 17</p>
+                <p><i class="fas fa-school"></i> Chiba Univ. The 12th High school science study presentation, Mathematics and informatics division, 優秀賞(Outstanding performance award)</p>
+                <p class="timeline-desc">「フィボナッチ数列を求めるアルゴリズムたち」(Algorithms for calculating the Fibonacci sequence)<a class="timeline-link" href="https://www.cfs.chiba-u.jp/koudai-renkei/event/history/2018/houkoku30.html" target="_blank"><i class="fas fa-external-link-alt"></i> Website</a></p>
               </div>
             </div>
             <div class="timeline-header"><span class="tag is-primary">2019</span></div>
             <div class="timeline-item is-success">
               <div class="timeline-marker is-success"></div>
               <div class="timeline-content">
-                <p class="heading">2月16日 :: 17歳</p>
-                <p><i class="fas fa-pencil-ruler"></i> AtCoder水色になる</p>
+                <p class="heading">February 16 :: age 17</p>
+                <p><i class="fas fa-pencil-ruler"></i> Became Cyan at AtCoder</p>
               </div>
             </div>
             <div class="timeline-item is-info">
               <div class="timeline-marker is-info"></div>
               <div class="timeline-content">
-                <p class="heading">3月16日</p>
-                <p><i class="fas fa-school"></i> 第10回千葉県課題研究発表会 口頭発表/ポスター発表</p>
-                <p class="timeline-desc">「フィボナッチ数列を求めるアルゴリズムたち」<a class="timeline-link" href="https://www.chiba-c.ed.jp/funako/fttp_kousin/ssh/2019_0316_3b.pdf"><i class="fas fa-external-link-alt"></i> 概要PDF</a></p>
+                <p class="heading">March 16</p>
+                <p><i class="fas fa-school"></i> Chiba Institute of Technology, The 10th Chiba-pref. project study presentation, oral / poster presentation</p>
+                <p class="timeline-desc">「フィボナッチ数列を求めるアルゴリズムたち」(Algorithms for calculating the Fibonacci sequence)<a class="timeline-link" href="https://www.chiba-c.ed.jp/funako/fttp_kousin/ssh/2019_0316_3b.pdf"><i class="fas fa-external-link-alt"></i> PDF</a></p>
               </div>
             </div>
             <div class="timeline-item is-success">
               <div class="timeline-marker is-success"></div>
               <div class="timeline-content">
-                <p class="heading">7月9日</p>
-                <p><i class="fas fa-language"></i> 英検準一級に合格</p>
+                <p class="heading">July 9</p>
+                <p><i class="fas fa-language"></i> Passed Eiken Pre-1 exam</p>
               </div>
             </div>
             <div class="timeline-item is-warning">
               <div class="timeline-marker is-warning"></div>
               <div class="timeline-content">
-                <p class="heading">11月9日 - 10日</p>
-                <p><i class="fas fa-pencil-ruler"></i> パソコン甲子園2019プログラミング部門出場</p>
-                <p class="timeline-desc">チーム名: AはDPのA<a class="timeline-link" href="http://web-ext.u-aizu.ac.jp/pc-concours/2019/final/f_finalteam2019.html"><i class="fas fa-external-link-alt"></i> 公式サイト</a></p>
+                <p class="heading">November 9 - 10</p>
+                <p><i class="fas fa-pencil-ruler"></i> Participated in All-Japan High School Programming Contest 2019: Final</p>
+                <p class="timeline-desc">Team name: A is the A for DP (original: AはDPのA)<a class="timeline-link" href="http://web-ext.u-aizu.ac.jp/pc-concours/2019/final/f_finalteam2019.html"><i class="fas fa-external-link-alt"></i> Website</a></p>
               </div>
             </div>
             <div class="timeline-item is-danger">
               <div class="timeline-marker is-danger"></div>
               <div class="timeline-content">
-                <p class="heading">12月12日 :: 18歳</p>
-                <p><i class="fas fa-university"></i> 筑波大学情報学群情報科学類に公募推薦入試で合格</p>
+                <p class="heading">December 12 :: age 18</p>
+                <p><i class="fas fa-university"></i> Passed the public application recommendation entrance examination of College of Information Science, School of Informatics, University of Tsukuba</p>
               </div>
             </div>
-            <div class="timeline-footer"><span class="tag is-medium is-primary">現在</span></div>
+            <div class="timeline-footer"><span class="tag is-medium is-primary">Now</span></div>
           </div>
         </section>
       </div>
