--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <div class="timeline-marker is-warning"></div>
               <div class="timeline-content">
                 <p class="heading">11月9日 - 10日</p>
-                <p><i class="fas fa-pencil-ruler"></i> パソコン甲子園2019プログラミング部門出場</p>
+                <p><i class="fas fa-pencil-ruler"></i> パソコン甲子園2019プログラミング部門本選出場</p>
                 <p class="timeline-desc">チーム名: AはDPのA<a class="timeline-link" href="http://web-ext.u-aizu.ac.jp/pc-concours/2019/final/f_finalteam2019.html"><i class="fas fa-external-link-alt"></i> 公式サイト</a></p>
               </div>
             </div>
