--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
 
     <h2>所属</h2>
     <p>木更津高校理数科（1期） → 筑波大学情報学群情報科学類（coins20）</p>
+
+    <h2>好きなこと・もの</h2>
+    <ul>
+        <li>競技プログラミング</li>
+        <li>ゲーム
+            <ul>
+                <li>弐寺, jubeat</li>
+                <li>Minecraft</li>
+                <li>L4D2</li>
+                <li>麻雀</li>
+            </ul>
+        </li>
+        <li>ステラのまほう</li>
+        <li>コンピュータ</li>
+    </ul>
     
 </body>
 
