--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </ul>
 
     <h2>所属</h2>
-    <p>筑波大学情報学群情報科学類（coins20）</p>
+    <p>筑波大学情報学群情報科学類（coins20） ← 木更津高校理数科1期</p>
 
     <h2>好きなこと・もの</h2>
     <ul>
