--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <li>競技プログラミング</li>
         <li>ゲーム
             <ul>
-                <li>弐寺, jubeat</li>
+                <li>弐寺(SP7段, DP7級)</li>
+                <li>jubeat</li>
                 <li>Minecraft</li>
                 <li>L4D2</li>
                 <li>麻雀</li>
