--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
     </dl>
     <p>などなど……。（<a href="works.html">もっと見る</a>）</p>
 
+    <h2>やっていること</h2>
+    <dl>
+      <dt>
+        SAT ソルバーの制作
+        <a href="https://github.com/private-yusuke/sat-d">GitHubリポジトリ</a>
+        <a href="https://scrapbox.io/sat-d/">Scrapbox</a>
+        <dd>DPLL は実装したので、次は別の heuristics を実装するためにいろいろ読んでいます</dd>
+      </dt>
+    </dl>
+
     <h2>やったこと</h2>
     <ul id="ul-parent">
       <li>
@@ -123,6 +133,12 @@
         </ul>
       </li>
       <li>ステラのまほう</li>
+      <li>
+        まちカドまぞく
+        <ul>
+          <li>2020/06/13 に半日かけて全話視聴した</li>
+        </ul>
+      </li>
       <li>コンピュータ</li>
     </ul>
 
