--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       SAT ソルバーの制作
       <a href="https://github.com/private-yusuke/sat-d">GitHubリポジトリ</a>
       <a href="https://scrapbox.io/sat-d/">Scrapbox</a>
-    <dd>DPLL は実装したので、次は別の heuristics を実装するためにいろいろ読んでいます</dd>
+    <dd>DPLL と CDCL が実装できました！</dd>
     </dt>
   </dl>
 
