Update mail address

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
     <tr>
       <td>メール</td>
       <td>
-        <a href="mailto:sakurapleasure0@gmail.com">sakurapleasure0@gmail.com</a>
+        <pre>
+rvvvvvvvvvvvvvvvvvvvvvvvq
+b                       d
+b   public              d
+b         @      .pub   d
+b          yusuke       d
+b                       d
+tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
       </td>
     </tr>
   </table>
