--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
 
   <h2>書いたもの</h2>
   <ul>
+    <li>WORD入学祝い号2021 例のピロピロ音をスマホでデコードしよう</li>
     <li><a href="https://www.word-ac.net/post/2021/0206-word49/">WORD49号</a> 自作SATソルバー制作記</li>
   </ul>
 
