Fix email monospace font

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <tr>
       <td>メール</td>
       <td>
-        <pre>
+        <pre class="email_aa">
 rvvvvvvvvvvvvvvvvvvvvvvvq
 b                       d
 b   public              d
