Add 応用情報技術者試験 into 資格

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
   <h2>資格</h2>
   <ul>
     <li>英検準一級</li>
+    <li>応用情報技術者試験（AP）</li>
   </ul>
   <h2>好きなこと・もの</h2>
   <ul>
