Add smt-d to the latest three works

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
   <h2>作ったものとか / <span style="font-size: 0.5em;">最新3件</span></h2>
   <dl>
     <dt>
+      内部状態が可視化された SMT ソルバーの制作
+      <a href="https://github.com/private-yusuke/smt-d">GitHubリポジトリ</a>
+      <a href="https://scrapbox.io/smt-d/">Scrapbox</a>
+    <dd>EUF の congruence closure algorithm の様子を DOT 言語で吐き出せるようにした SMT ソルバー</dd>
+    </dt>
+    <dt>
       EWSParserApp
       <a href="https://github.com/private-yusuke/EWSParserApp">GitHub リポジトリ</a>
     </dt>
@@ -80,11 +86,6 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
       <a href="https://scrapbox.io/sat-d/">Scrapbox</a>
     <dd>CDCL での implication graph の様子を DOT 言語で吐き出せるようにしました</dd>
     </dt>
-    <dt>
-      botot2
-      <a href="https://github.com/private-yusuke/botot2">GitHubリポジトリ</a>
-    </dt>
-    <dd>Misskey上で動くチャットボット（人工無能）。</dd>
   </dl>
   <p>などなど……。（<a href="works.html">もっと見る</a>）</p>
 
