--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
 
   <h2>書いたもの</h2>
   <ul>
+    <li><a href="https://www.word-ac.net/post/2022/0605-word51/">WORD51号</a> Coq の基礎の基礎</li>
     <li>WORD入学祝い号2021 例のピロピロ音をスマホでデコードしよう</li>
     <li><a href="https://www.word-ac.net/post/2021/0206-word49/">WORD49号</a> 自作SATソルバー制作記</li>
   </ul>
