Add 第3級アマチュア無線技士 to 資格

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
   <ul>
     <li>英検準一級</li>
     <li>応用情報技術者試験（AP）</li>
+    <li>第3級アマチュア無線技士</li>
   </ul>
   <h2>好きなこと・もの</h2>
   <ul>
