--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
     <li>英検準一級</li>
     <li>応用情報技術者試験（AP）</li>
     <li>第3級アマチュア無線技士</li>
+    <li>普通自動車第一種運転免許</li>
   </ul>
   <h2>好きなこと・もの</h2>
   <ul>
