Add セキュリティ・キャンプ全国大会2022 オンライン 参加

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ tvvvvvvvvvvvvvvvvvvvvvvvj</pre>
 
   <h2>やったこと</h2>
   <ul id="ul-parent">
+    <li>セキュリティ・キャンプ全国大会2022 オンライン 参加
+      <a href="https://www.ipa.go.jp/jinzai/camp/2022/zenkoku2022_index.html">公式サイト</a>
+      <ul>
+        <li>X4 無線通信ハッキングゼミ</li>
+      </ul>
+    </li>
     <li>
       PCK2019プログラミング部門本選出場（AはDPのA）
       <a href="https://web-ext.u-aizu.ac.jp/pc-concours/">公式サイト</a>
