deploy: c846d53b07c41648b557ced1236dee041589e477

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ tvvvvvvvvvvvvvvvvvvvvvvvj
 </pre></td></tr><tr><td>コールサイン</td><td>JK1NFU</td></tr></table><h2>作ったものとか / <span style=font-size:.5em>最新 3 件</span></h2><dl><dt>内部状態が可視化された SMT ソルバーの制作
 <a href=https://github.com/private-yusuke/smt-d>GitHub リポジトリ</a>
 <a href=https://scrapbox.io/smt-d/>Scrapbox</a></dt><dd>EUF の congruence closure algorithm の様子を DOT 言語で吐き出せるようにした SMT ソルバー</dd><dt>EWSParserApp
-<a href=https://github.com/private-yusuke/EWSParserApp>GitHub リポジトリ</a>
-<a href=https://scrapbox.io/smt-d/>Scrapbox</a></dt><dd>緊急警報信号（ｐｒｐｒ音）を解読するための Android 用アプリケーション</dd><dt>内部状態が可視化された SAT ソルバーの制作
+<a href=https://github.com/private-yusuke/EWSParserApp>GitHub リポジトリ</a></dt><dd>緊急警報信号（ｐｒｐｒ音）を解読するための Android 用アプリケーション</dd><dt>内部状態が可視化された SAT ソルバーの制作
 <a href=https://github.com/private-yusuke/sat-d>GitHub リポジトリ</a>
 <a href=https://scrapbox.io/sat-d/>Scrapbox</a></dt><dd>CDCL での implication graph の様子を DOT 言語で吐き出せるようにしました</dd></dl><p>などなど……。（<a href=works/>もっと見る</a>）</p><h2>書いたもの</h2><ul><li><a href=https://www.word-ac.net/post/2022/0605-word51/>WORD 51 号</a>
 Coq の基礎の基礎</li><li>WORD 入学祝い号 2021 例のピロピロ音をスマホでデコードしよう</li><li><a href=https://www.word-ac.net/post/2021/0206-word49/>WORD 49 号</a>
